@@ -16,6 +16,8 @@ get 'tags_with_error';
 
 any [qw(GET POST)] => 'links';
 
+get '/buttons';
+
 get 'script';
 
 get 'style';
@@ -103,6 +105,14 @@ $t->post_ok('/links')->status_is(200)->content_is(<<'EOF');
 <a href="/links">Home</a>
 <a href="/form/23" title="Foo">Foo</a>
 <a href="/form/23" title="Foo">Foo</a>
+EOF
+
+# Buttons
+$t->get_ok('/buttons')->status_is(200)->content_is(<<'EOF');
+<form action="/links"><input type="submit" value="First test"></form>
+<form action="/links.txt"><input type="submit" value="Second"></form>
+<form action="/" class="menu"><input type="submit" value="Third"></form>
+<form action="http://example.com"><input type="submit" value="Fourth"></form>
 EOF
 
 # Scripts
@@ -508,6 +518,12 @@ __DATA__
 <%= link_to Home => 'links' %>
 <%= link_to Foo => 'form', {test => 23}, title => 'Foo' %>
 <%= link_to form => {test => 23} => (title => 'Foo') => begin %>Foo<% end %>
+
+@@ buttons.html.ep
+%= button_to 'First test' => 'links'
+%= button_to 'Second' => 'links' => {format => 'txt'}
+%= button_to 'Third' => '/' => (class => 'menu')
+%= button_to 'Fourth' => 'http://example.com'
 
 @@ script.html.ep
 <%= javascript '/script.js' %>
